--- a/src/NetCoreApiDemo/project.json
+++ b/src/NetCoreApiDemo/project.json
@@ -39,10 +39,10 @@
     }
   },
 
-  "runtimes": {
-    "win10-x64": {},
-    "ubuntu.16.04-x64": {}
-  },
+  // "runtimes": {
+  //   "win10-x64": {},
+  //   "ubuntu.16.04-x64": {}
+  // },
 
   "publishOptions": {
     "include": [
